--- a/style/App.css
+++ b/style/App.css
@@ -13,6 +13,27 @@
 
   /* box-shadow:5px 5px 15px hsl(205, 8%, 71%),-5px -5px 15px hsl(207, 4%, 54%); */
 }
+#menulinemenu{
+  color: black;
+  width:120px;
+  height:100px;
+  text-align: center;
+  
+  position: absolute;
+  /* margin:0px 0px 0px 205px; */
+  margin-top: -30px;
+  background-color: white;
+  border-radius: 8px;
+  z-index: 1;
+  display: none;
+}
+#menulinemenu div{
+  padding: 5px 5px 5px 5px;
+  cursor: pointer;
+}
+#menulinemenu div:hover{
+  background-color: rgb(200, 199, 199);
+}
 
 
 .block1{
@@ -148,6 +169,9 @@
 #coursecontainer{
   width:1100px;
   margin-left: 210px;
+  /* box-shadow:3px -10px 60px hsl(216, 5%, 78%) ; */
+  z-index: 1;
+  
   /* display: flex; */
   /* background-color: aquamarine; */
 
@@ -158,9 +182,10 @@
   /* display: flex;
   justify-content: center; */
   height:18px;
+  display: none;
   background-color: rgb(243, 241, 241);
   position: absolute;
-  margin:-75px 0px 0px 680px;
+  margin:-75px 0px 0px 580px;
   opacity: 0.5;
   box-shadow:35px 5px 120px hsl(207, 4%, 54%),-35px -5px 120px hsl(207, 4%, 54%) ;
   animation:fadeeffect linear;
@@ -180,7 +205,7 @@
     transform: translateX(0px);
   }
   100%{
-    transform: translateX(130px);
+    transform: translateX(250px);
   }
 }
 
@@ -232,6 +257,18 @@
     /* width:500px; */
   }
 }
+@media (min-width:430px) and (max-width:500px)
+{
+  #fadeeffectinsubhead{
+    margin-left: 100px;
+  }
+}
+@media (min-width:370px) and (max-width:430px)
+{
+  #fadeeffectinsubhead{
+    margin-left: 50px;
+  }
+}
 
 @media (max-width:600px)
 {
@@ -240,6 +277,7 @@
     margin-left: 0px;
     /* background-color: aquamarine; */
     overflow: hidden;
+    
   
   }
   #scrollingmsg{
@@ -282,5 +320,8 @@
   #coursecontainer{
     margin-left: 10px;
     width:100vw;
+  }
+  #menulinemenu{
+    display: none;
   }
 }
