--- a/style/card.css
+++ b/style/card.css
@@ -6,6 +6,9 @@
     overflow: hidden;
     cursor: pointer;
     transition-duration: 0.5s;
+    animation: appear linear;
+     animation-timeline: view();
+    animation-range:entry 0% cover 50%;
     /* box-shadow:2px 2px 0px hsl(210, 3%, 88%),-2px -2px 60px hsl(202, 7%, 70%) ; */
     
     /* opacity: 0.5; */
@@ -15,5 +18,26 @@
 #cardcontainer:hover{
     box-shadow:3px -10px 60px hsl(216, 5%, 78%) ;
     transform: rotateX(10deg);
-    /* transform: rotateY(-10deg); */
+    
 }
+@media (max-width:550px)
+{
+    #cardcontainer{
+        width:100%;
+    }
+}
+@keyframes appear{
+    from{
+        opacity: 0;
+        scale: 0.8;
+    
+      }
+      to{
+        opacity: 1;
+        scale: 1;
+        
+      
+    
+        /* width:500px; */
+      }
+  }
